plugins {
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    id 'net.minecraftforge.gradle' version '[6.0,6.2)'
}

version = mod_version
group = mod_group_id

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

println "Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty 'java.vm.version'} (${System.getProperty 'java.vendor'}), Arch: ${System.getProperty 'os.arch'}"

configurations {
    embeddedLib
    implementation.extendsFrom embeddedLib
}

minecraft {
    mappings channel: mapping_channel, version: mapping_version
    copyIdeResources = true

    runs {
        configureEach {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'

            mods {
                "${mod_id}" {
                    source sourceSets.main
                }
            }
        }

        client {
            property 'forge.enabledGameTestNamespaces', mod_id
        }

        server {
            property 'forge.enabledGameTestNamespaces', mod_id
            args '--nogui'
        }

        gameTestServer {
            property 'forge.enabledGameTestNamespaces', mod_id
        }

        data {
            workingDirectory project.file('run-data')
            args '--mod', mod_id, '--all', '--output', file('src/generated/resources/'),
                    '--existing', file('src/main/resources/')
        }
    }
}

sourceSets {
    main {
        java {
            exclude 'com/zszl/zszlScriptMod/gui/GuiInventoryViewer.java'
            exclude 'com/zszl/zszlScriptMod/inventory/InventoryViewerContainer.java'
        }

        resources {
            srcDirs += [
                    'src/generated/resources'
            ]
            exclude 'META-INF/MANIFEST.MF'
        }
    }
}

repositories {
    maven { url = uri('../local-maven') }
    mavenCentral()
}

dependencies {
    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
    embeddedLib "dev.babbaj:nether-pathfinder:1.4.1"
    embeddedLib "org.jsoup:jsoup:1.17.2"
    embeddedLib "com.vladsch.flexmark:flexmark:0.62.2"
    embeddedLib "com.belerweb:pinyin4j:2.5.1"
    def tmVersion = "3.12.0"
    embeddedLib "com.twelvemonkeys.imageio:imageio-core:${tmVersion}"
    embeddedLib "com.twelvemonkeys.imageio:imageio-webp:${tmVersion}"
    embeddedLib "com.twelvemonkeys.common:common-lang:${tmVersion}"
    embeddedLib "com.twelvemonkeys.common:common-io:${tmVersion}"
    embeddedLib "com.twelvemonkeys.common:common-image:${tmVersion}"
    compileOnly "org.spongepowered:mixin:0.8.5"
    annotationProcessor "org.spongepowered:mixin:0.8.5:processor"
}

def generatedLegacyLangDir = layout.buildDirectory.dir('generated/resources/legacyLangJson')

tasks.register('generateLegacyLangJson') {
    def legacyLangFiles = fileTree('src/main/resources') {
        include 'assets/**/lang/*.lang'
    }

    inputs.files(legacyLangFiles)
    outputs.dir(generatedLegacyLangDir)

    doLast {
        def outputRoot = generatedLegacyLangDir.get().asFile
        delete(outputRoot)

        legacyLangFiles.files.each { langFile ->
            def props = new Properties()
            langFile.withReader('UTF-8') { reader ->
                props.load(reader)
            }

            def ordered = new TreeMap<String, String>()
            props.each { key, value ->
                ordered.put(String.valueOf(key), String.valueOf(value))
            }

            def relativePath = project.relativePath(langFile).replace('\\', '/')
            def targetRelativePath = relativePath
                    .replaceFirst(/^src\/main\/resources\//, '')
                    .replaceFirst(/\.lang$/, '.json')
            def targetFile = new File(outputRoot, targetRelativePath)
            targetFile.parentFile.mkdirs()
            targetFile.setText(
                    groovy.json.JsonOutput.prettyPrint(groovy.json.JsonOutput.toJson(ordered))
                            + System.lineSeparator(),
                    'UTF-8')
        }
    }
}

tasks.named('processResources', ProcessResources).configure {
    dependsOn tasks.named('generateLegacyLangJson')
    filteringCharset = 'UTF-8'
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            forge_version          : forge_version,
            forge_version_range    : forge_version_range,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_description        : mod_description,
    ]
    inputs.properties replaceProperties

    filesMatching(['META-INF/mods.toml', 'pack.mcmeta']) {
        expand replaceProperties + [project: project]
    }

    from(generatedLegacyLangDir)
}

tasks.named('jar', Jar).configure {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    metadataCharset = 'UTF-8'

    manifest {
        attributes([
                'MixinConfigs'            : 'mixins.shadowbaritone.json',
                'Specification-Title'     : mod_id,
                'Specification-Vendor'    : mod_authors,
                'Specification-Version'   : '1',
                'Implementation-Title'    : project.name,
                'Implementation-Version'  : project.jar.archiveVersion,
                'Implementation-Vendor'   : mod_authors,
                'Implementation-Timestamp': new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
        ])
    }

}

tasks.named('compileJava', JavaCompile).configure {
    dependsOn tasks.named('createMcpToSrg')

    options.compilerArgs.addAll([
            "-AoutRefMapFile=${layout.buildDirectory.file('classes/java/main/mixins.shadowbaritone.refmap.json').get().asFile.absolutePath}",
            "-AdefaultObfuscationEnv=searge",
            "-AmappingTypes=tsrg",
            "-AreobfTsrgFile=${layout.buildDirectory.file('createMcpToSrg/output.tsrg').get().asFile.absolutePath}",
            "-AoutTsrgFile=${layout.buildDirectory.file('tmp/compileJava/mixins.shadowbaritone.tsrg').get().asFile.absolutePath}"
    ])
}

afterEvaluate {
    tasks.named('reobfJar').configure {
        dependsOn tasks.named('compileJava')
        extraMappings.from(layout.buildDirectory.file('tmp/compileJava/mixins.shadowbaritone.tsrg'))
    }
}

def embeddedJarOutput = tasks.named('jar', Jar).flatMap { it.archiveFile }

tasks.register('embedEmbeddedLibs') {
    dependsOn tasks.named('reobfJar')
    inputs.files(configurations.embeddedLib)
    outputs.file(embeddedJarOutput)

    doLast {
        def targetJar = embeddedJarOutput.get().asFile
        def tempDir = layout.buildDirectory.dir('tmp/embedEmbeddedLibs').get().asFile
        delete(tempDir)
        mkdir(tempDir)

        copy {
            from(configurations.embeddedLib.collect { zipTree(it) })
            into(tempDir)
            exclude 'META-INF/MANIFEST.MF'
            exclude 'META-INF/*.SF'
            exclude 'META-INF/*.DSA'
            exclude 'META-INF/*.RSA'
        }

        ant.zip(destfile: targetJar, update: 'true') {
            fileset(dir: tempDir)
        }
    }
}

tasks.named('build').configure {
    dependsOn tasks.named('embedEmbeddedLibs')
}

tasks.named('jar').configure {
    finalizedBy tasks.named('embedEmbeddedLibs')
}

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            artifact jar
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/mcmodsrepo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}
